[tool.poetry]
name = "selfconsistency"
version = "0.1.0"
description = ""
authors = ["Sebastian Fellner <fellnerseb@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
opencv_python = "==3.4.0.12"
scikit-image = "==0.13.1"
scipy = "==1.0.0"
scikit_learn = "==0.19.1"
Pillow = "==5.0.0"
numpy = "==1.14.0"
tensorflow = "1.2.0"
matplotlib = "2.0.2"
functools32 = "^3.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
